# marvel-ingestion

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py  marvel_characters.py  marvel_comics.py  marvel_creators.py  marvel_events.py  marvel_series.py  marvel_stories.py  marvelapi.py  metadata.py  utils.py
src/aws/: aws_bucket.py  aws_roles_and_policies.py
src/sf/: queries.py  sf_setup.py
unit_tests/: test_marvel_characters.py  test_marvel_comics.py  test_marvel_creators.py  test_marvel_events.py  test_marvel_series.py  test_marvel_stories.py  test_marvelapi.py  test_metadata.py  test_util_functions.py
