[tool.poetry]
name = "marvel-ingestion-veronika"
version = "0.1.0"
description = ""
authors = ["Veronika <veronika@infinitelambda.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
DateTime = "^4.4"
boto3 = "^1.21.8"
botocore = "^1.24.8"
poethepoet = "^0.13.1"
snowflake = "^0.0.3"
snowflake-connector-python = "2.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mockito = "^1.3.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
export_requirements = { shell = "poetry export -f requirements.txt --output requirements.txt"}
test_cov = { shell = "pytest --cov"}
test_threshold = {shell = "coverage report --fail-under=70"}
poe_test = ["test_cov","test_threshold" ]
docker_build = {shell = "docker build ./ -t marvel-ingestion-veronika -f ./Dockerfile"}


